--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "react-dom": "^18.2.0",
     "react-router": "6.8.1",
     "react-router-dom": "6.8.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.2.2",
+    "@reduxjs/toolkit": "1.9.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
