--- a/package.json
+++ b/package.json
@@ -10,21 +10,23 @@
     "preinstall": "npx npm-force-resolutions"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "1.9.2",
     "@types/node": "^18.13.0",
     "md5-typescript": "^1.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router": "6.8.1",
     "react-router-dom": "6.8.1",
     "react-scripts": "^5.0.1",
-    "react-redux": "^8.0.5",
     "redux": "^4.2.0",
     "redux-saga": "^1.2.2",
-    "@reduxjs/toolkit": "1.9.2"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
     "dotenv": "^16.0.3",
     "react-error-overlay": "^6.0.9",
