--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
     "@mui/styled-engine-sc": "^5.11.9",
+    "@mui/styles": "^5.11.9",
     "@reduxjs/toolkit": "1.9.2",
     "@types/material-ui": "^0.21.12",
     "@types/node": "^18.13.0",
